<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.splitabill.Main2Activity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/AmountText"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:layout_marginBottom="456dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="?android:attr/colorBackground"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/Payment_Prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginBottom="457dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/TotalAmountLabel_Prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AmountText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/NumberOfPeople"
        android:layout_width="250dp"
        android:layout_height="23dp"
        android:layout_marginBottom="388dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="45dp"
        android:background="?attr/colorBackgroundFloating"
        android:entries="@array/NumberOfPeople_arrays"
        android:fadingEdge="horizontal|vertical"
        android:minWidth="20dp"
        android:popupBackground="@android:drawable/alert_light_frame"
        android:prompt="@string/NumberOfPeople_Prompt"
        android:theme="@style/AppTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmountText" />

    <SeekBar
        android:id="@+id/TipSeekbar"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="13dp"
        android:background="?attr/colorBackgroundFloating"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NumberOfPeople" />

    <EditText
        android:id="@+id/TipEditText"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="13dp"
        android:background="?attr/colorBackgroundFloating"
        android:ems="10"
        android:hint="@string/TipEditText_Prompt"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipSeekbar" />

    <TextView
        android:id="@+id/BillPerPerson"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginEnd="157dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="20dp"
        android:text="@string/Payment_Prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginEnd="132dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="40dp"
        android:text="@string/PaymentLabel_Prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipEditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:paddingTop="10dp"
        android:text="@string/TipEditLabel_Prompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TipEditText"
        app:layout_constraintTop_toBottomOf="@+id/TipSeekbar" />

</android.support.constraint.ConstraintLayout>
